# billigaste_kvittot

./: .gitignore  .user.yml  README.md  dockerfile.dashboard  dockerfile.pipe  dockerfile.pipline  dockerfile.webapp  exempel2_kategori.json  exempel_kategori.txt  hello.py  kategori.json  pyproject.toml  requirements.txt
city_gross/: city_gross_url.py  citygross_dlt.py
city_gross/data/: city_gross_erbjudanden_v43.json  city_gross_erbjudanden_v47.json
coop/: coop_api.py  coop_dlt.py  coop_get_api.py
coop/data/: coop_erbjudanden_v43.json  coop_erbjudanden_v47.json
dbt_billigaste_kvittot/: dbt_project.yml
dbt_billigaste_kvittot/models/mart/: marts_all_stores.sql  marts_citygross.sql  marts_coop.sql  marts_hemkop.sql  marts_willys.sql
dbt_billigaste_kvittot/models/src/: sources.yml  src_city_gross.sql  src_coop.sql  src_hemkop.sql  src_willys.sql
frontend/: app.py  happ.py  index.html  requirements.txt  style.css
frontend/static/: style.css
frontend/templates/: cart.html  index.html
hemkop/: hemkop_dlt.py  hemkop_url.py  test_dlt.py
hemkop/data/: hemkop_erbjudanden_v43.json  hemkop_erbjudanden_v47.json
iac/: .terraform.lock.hcl  container-rg.tf  locals.tf  providers.tf  random.tf  storage-account.tf  variable.tf  webb-app.tf
iac/assets/: profiles.yml
orchestration/: definitions.py
stores/city_gross/: citygross_dlt.py
stores/coop/: coop_dlt.py
stores/hemkop/: hemkop_dlt.py
stores/ica/: ica_dlt.py  test.py
stores/willys/: willys_dlt.py
taipy_app/: app.py
willys/: willys_dlt.py  willys_url.py
willys/data/: willys_erbjudanden_v47.json
(+6 files in other folders)
